<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/StandardFont"
        android:layout_margin="5dp"
        android:layout_width="fill_parent"
        android:background="#025"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="20dip" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_current_test_is" 
        android:textAppearance="?android:attr/textAppearanceMedium"/>
        
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Threshold value (e.g. 1):"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/threshold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="% Pixels above threshold (e.g. 75):"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/percentPixels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Box Width (e.g. 40):"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/boxWidth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number of Columns to exceed threshold (e.g. 1):"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/numColumns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
    
    <Button
    	android:id="@+id/SaveButton"
    	style="@style/StandardButton"
    	android:text="@string/SaveButton"
    	android:layout_width="fill_parent"
    	android:layout_height="50dp">
	</Button>
        
</LinearLayout>


